<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:android="http://schemas.android.com/apk/res/android">
    <string name="app_name">AnyMemo</string>
    <string name="app_full_name">AnyMemo</string>
    <string name="website_versions_view">https://anymemo.org/versions-view</string>
    <string name="ok_text">OK</string>
    <string name="cancel_text">Cancel</string>
    <string name="yes_text">Yes</string>
    <string name="no_text">No</string>
    <string name="back_menu_text">Back</string>
    <string name="detail_menu_text">Detail</string>
    <string name="settings_menu_text">Settings</string>
...
    <string name="spell_hint">Type out the answer</string>
    <string name="add_to_study_mode">Add to study mode</string>
    <string name="spell_hint_btn_text">Verify answer</string>
    <string name="workout_text">Workout Mode</string>

    <string name="spell_test">Type out the answer</string>
    <string name="add_to_workout_mode">Add to workout</string>
    <string name="add_to_workout_mode_message">By adding this deck to workout mode, you will be able
        to study a number of cards every day .</string>
    <string name="add_start_date">Add start date</string>
    <string name="add_start_date_message">""</string>
    <string name="add_number_of_days">Add number of days</string>
    <string name="add_number_of_days_message">Add number of days</string>
    <string name="enable_notification">Notify me for my next workout</string>
    <string name="number_days_button">Select number of days</string>
    <string name="number_cards_button">Select number of cards</string>
    <string name="add_number_of_cards">Add number of cards</string>
    <string name="tags">Tags</string>
    <string name="add_tag">Add a Tag</string>
    <string name="add_a_tag">Add a tag</string>
    <string name="add_tag_name">Add tag Name</string>
    <string name="today_card">Number of cards today: </string>
...
